location details alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -303,10 +303,10 @@ button:hover {
 
 /* ===== CONTACT PAGE | MAIN + LOCATION SECTION ===== */
 
-
 .location_details {
     justify-content: space-evenly;
     display: flex;
+    align-items: center;
     background-color: #E5E7EB;
     padding: 5% 5%;
     text-align: center;
